feat: add blog app,update views and urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,8 +129,7 @@
 
             <div class="menu">
                 <a href="/">Home</a>
-                <a href="/about">About</a>
-                <a href="/articles">Articles</a>
+                <a href="/blogs">Blogs</a>
                 <a href="/gallery">Gallery</a>
             </div>
             
